kubernetes/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utopia-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: utopia-ingress
spec:
  rules:
  - http:
      paths:
        - path: $FLIGHTS_PREFIX
          pathType: Prefix
          backend:
            service:
              name: flights-service
              port:
                number: $CONTAINER_PORT
        - path: $BOOKINGS_PREFIX
          pathType: Prefix
          backend:
            service:
              name: bookings-service
              port:
                number: $CONTAINER_PORT
        - path: $FRONTEND_PREFIX
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: $CONTAINER_PORT
        - path: $USERS_PREFIX
          pathType: Prefix
          backend:
            service:
              name: users-service
              port:
                number: $CONTAINER_PORT
