kubernetes/eks/micro-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "*.elb.amazonaws.com"
    http:
      paths:
        - path: /airline
          pathType: Prefix
          backend:
            service: 
              name: flights-service
              port:
                number: 80 
        - path: /booking
          pathType: Prefix
          backend:
            service: 
              name: bookings-service
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: users-service
              port:
                number: 80
